cli/tests/extension/snapshots/integration_tests__extension__update__update_specific_extensions-2.snap
---
source: cli/tests/extension/update.rs
expression: "&lockfile_contents"
---
version = "1"

[[extensions]]
name = "echo"
version = "1.1.3"

[[extensions]]
name = "jwt"
version = "0.20.20"

[[extensions]]
name = "rest"
version = "0.3.0"

[[extensions]]
name = "spicedb"
version = "2.7.0"
